<resources>
    <string name="app_name">Jewello</string>
    <string name="edit_name">Business Name</string>
    <string name="edit_key">Create PIN</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="customers">Customers</string>
    <string name="items">Items</string>
    <string name="add_customer">Add Customer</string>
    <string name="print_bill">Print Bill</string>
    <string name="setup_warning">*You can change it later.</string>
    <string name="not_Found">*Customer not found!</string>
    <string name="amount_received">Amount Received</string>
    <string name="printer_settings">Printer Setup</string>
    <string name="bills">Bills</string>
    <string name="bill_not_found">Bill Not Found</string>
    <string name="pendings">Pending</string>
    <string name="send_to_pending">Send To Pending</string>
    <string name="add_item">Add Item</string>
    <string name="total_due_balance">Total Due balance: </string>
    <string name="balance">Balance: </string>
    <string name="rupee_symbol">₹</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="goto_last_bill">Goto last bill</string>
    <string name="view_pending">View pending</string>
    <string name="bill_estimation_app">Jewellery Bill Estimation Application</string>
    <string name="add_now">Add this now!</string>
    <string name="add_new">Add New</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="delete_message">Are you sure you want to delete this customer? All the data related to this customer will also be deleted and cannot be restored in future</string>
    <string name="update_name">Update Bussiness Name</string>
    <string name="cancel">Cancel</string>
    <string name="change_name">Edit name</string>
</resources>