<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:padding="20dp"
            />

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_estimation_app"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="22sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"
            app:startIconDrawable="@drawable/ic_business"
            android:paddingStart="10dp"
            app:startIconTint="@color/colorPrimaryLight"
            android:paddingEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/setup_warning"
            android:textColor="@android:color/holo_red_dark"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="3dp"
            android:layout_marginTop="20dp"
            app:cardElevation="3dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="getStarted"
                />

        </androidx.cardview.widget.CardView>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>