<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <import type="com.dawar.jewellerybilling.Utils"/>

        <variable
            name="record"
            type="com.dawar.jewellerybilling.database.entities.Record" />
        <variable
            name="customer"
            type="com.dawar.jewellerybilling.database.entities.Customer" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".customers.updateActivity.AmountReceivedPrintActivity">


        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="goBack"
                app:srcCompat="@drawable/ic_arrow_back_24"
                app:tint="@color/colorPrimary"
                android:padding="8dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway"
                android:text="Amount Received"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="3dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{customer.name}"
                tools:text="Pankaj kumar"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Utils.getDateStringFromLong(record.date)}"
                tools:text="21/11/2021"
                android:textSize="18sp"
                android:textStyle="bold"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_received"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupee_symbol"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(record.amount)}"
                    tools:text="12121"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="3dp"
                    />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_due_balance"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupee_symbol"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(customer.balance)}"
                    tools:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="3dp"
                    />


            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_receipt"
                android:onClick="print"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>